--- a/src/translation/en/translation.json
+++ b/src/translation/en/translation.json
@@ -23,6 +23,9 @@
     "comporttool": {
       "text": "Visualization of incoming COM-Port/TCPIP data. Lots of functions (like selecting channels, time measrurements, pause feature without data loss, renaming of channels, change of history length, ...) make deep analysis of data possible. Is used at PAS Deutschland GmbH as the standard tool to optimize touch solutions."
     },
+    "klimaComfort": {
+      "text": "Do you need air conditioning and are living close to Poznan (poland)? You are in the right place and we will help you with our expertise!"
+    },
     "additional": "And many more!"
   }
 }
