--- a/src/translation/de/translation.json
+++ b/src/translation/de/translation.json
@@ -1,6 +1,6 @@
 {
   "appbar": {
-    "title": "Fullstack Software Entwickler"
+    "title": "Fullstack Software Engineer"
   },
   "navbar": {
     "aboutme": "Über mich",
@@ -17,8 +17,8 @@
     }
   },
   "aboutme": {
-    "subheader": "Fullstack Software Entwickler in Berlin",
-    "text": "Fullstack Software Entwickler mit dem Drang sich stets zu verbessern. <br/> Ich besitze Erfahrung im Fullstack Webdevelopment (Java/Kotlin, JSP/React, MySQL, Linux), sowie im Embedded Bereich (STM32, Cypress, ESP32). <br/><br/> Weiter unten können Sie mehr über mich Erfahren, oder Kontakt zu mir aufnehmen. <br/><br/> Ich freue mich auf Sie! <br/> Jan"
+    "subheader": "Fullstack Software Engineer in Berlin",
+    "text": "Fullstack Software Engineer mit dem Drang sich stets zu verbessern. <br/> Ich besitze Erfahrung im Fullstack Webdevelopment (Java/Kotlin, JSP/React, MySQL, Linux), sowie im Embedded Bereich (STM32, Cypress, ESP32). <br/><br/> Weiter unten können Sie mehr über mich Erfahren, oder Kontakt zu mir aufnehmen. <br/><br/> Ich freue mich auf Sie! <br/> Jan"
   },
   "projects": {
     "title": "Projekte",
