--- a/src/translation/en/translation.json
+++ b/src/translation/en/translation.json
@@ -22,7 +22,7 @@
   },
   "projects": {
     "title": "Projects",
-    "qd": {
+    "w3datalyzer": {
       "text": "Evaluation and presentation of data for the game \"Warcraft 3\"."
     },
     "qd": {
